crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__objects.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"{x: 5, y: 10};\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..14,
                expr: Obj(
                    Obj {
                        span: 0..13,
                        props: [
                            Prop(
                                KeyValue(
                                    KeyValueProp {
                                        span: 1..5,
                                        name: "x",
                                        value: Lit(
                                            Num(
                                                Num {
                                                    span: 4..5,
                                                    value: "5",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            Prop(
                                KeyValue(
                                    KeyValueProp {
                                        span: 7..12,
                                        name: "y",
                                        value: Lit(
                                            Num(
                                                Num {
                                                    span: 10..12,
                                                    value: "10",
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        ],
                    },
                ),
            },
        ],
    },
)
