crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__operations-11.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"-a\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..2,
                expr: UnaryExpr(
                    UnaryExpr {
                        span: 0..2,
                        op: Minus,
                        arg: Ident(
                            Ident {
                                span: 1..2,
                                name: "a",
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
