crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__operations-12.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"-(a + b)\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..8,
                expr: UnaryExpr(
                    UnaryExpr {
                        span: 0..8,
                        op: Minus,
                        arg: Op(
                            Op {
                                span: 2..7,
                                op: Add,
                                left: Ident(
                                    Ident {
                                        span: 2..3,
                                        name: "a",
                                    },
                                ),
                                right: Ident(
                                    Ident {
                                        span: 6..7,
                                        name: "b",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
