crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__operations-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"a == b;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..7,
                expr: Op(
                    Op {
                        span: 0..6,
                        op: EqEq,
                        left: Ident(
                            Ident {
                                span: 0..1,
                                name: "a",
                            },
                        ),
                        right: Ident(
                            Ident {
                                span: 5..6,
                                name: "b",
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
